# config-path

./: .gitignore  README.md  build-for-fedora.sh  build.cmd  build.sh  clean.sh  localinstall.sh  pyproject.toml  setup.py  test_config_path.py  update.cmd  update.sh  upload-to-pypi.cmd  upload-to-pypi.sh
config_path/: __init__.py
src/config_path/: __init__.py
